# eye_tracker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile
eye_tracker/: errors.py  main.py  utils.py
eye_tracker/computers/: __init__.py  base.py  eye_tracker.py
